--- a/src/comp61542/templates/statistics.html
+++ b/src/comp61542/templates/statistics.html
@@ -13,5 +13,8 @@
   <li><a href="/statisticsdetails/author_year">Author by Year</a></li>
   <li><a href="/averages">Averaged Year Data</a></li>
   <li><a href="/coauthors">Co-Authors</a></li>
+  <li><a href="/search_authors">Search Author</a></li>
+  <li><a href="/times_appear_first">Times authors appear first</a></li>
+  <li><a href="/times_appear_last">Times authors appear last</a></li>
 </ul>
 {% endblock %}
