--- a/src/comp61542/templates/coauthors.html
+++ b/src/comp61542/templates/coauthors.html
@@ -21,7 +21,15 @@ Publication type:
 
 <h1>{{ args.pub_str }} in {{ args.start_year }} {% if args.start_year != args.end_year %} - {{ args.end_year }}{% endif %}</h1>
 
-<table>
+<script src="http://www.allmyscripts.com/Table_Sort/gs_sortable.js"></script>
+<script type="text/javascript">
+<!--
+var TSort_Data = new Array ('my_table', 's', 's');
+tsRegister();
+// -->
+</script>
+
+<table id="my_table">
   <thead>
     <tr>
     {% for column in args.data[0] %}
